tests/toylang/neg/001144_mutation.toylang
program a = { if var then sleep; } .
